<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!-- App Default String -->
    <string name="app_name">Leave App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <!-- Preferences String -->
    <string name="reg_no_key" translatable="False">reg_no</string>
    <string name="pass_key" translatable="False">pass</string>
    <string name="reg_no_title">Registration Number</string>
    <string name="pass_title">Password</string>

    <!-- Home Screen View String -->
    <string name="applyLeaveBtn">Apply For New Leave</string>

    <!-- List Item Default View String -->
    <string name="to">Place Goes Here</string>
    <string name="nod">No. of Days</string>
    <string name="status">Status</string>
    <string name="extDate">Exit Date</string>

    <!-- Login Creds Dialog String -->
    <string name="regTF">Registration No:</string>
    <string name="passTF">Password:</string>

    <!-- SyncAdapter/App related Strings -->
    <string name="sync_account_type">leaveapp.example.com</string>
    <string name="content_authority">com.developer.gdgvit.leaveapp.app</string>

    <!-- Detail fragment strings -->
    <string name="slno">Sl No:</string>
    <string name="appliedTo">Applied To:</string>
    <string name="appliedOn">Applied On:</string>
    <string name="leave">Leave Type:</string>
    <string name="place">Address:</string>
    <string name="exit">Exit On:</string>
    <string name="entry">Entry On:</string>
    <string name="nodDF">No of days:</string>
    <string name="statusDF">Status:</string>
    <string name="approvedBy">Approved By:</string>
    <string name="approvedOn">Approved On:</string>
    <string name="nullText"></string>
    <string name="regno">Reg No.</string>
    <string name="password">Password</string>
    <string name="passwordpref">Your Password secure here</string>
    <string name="login">Login</string>
    <string name="app_bar_title">Leave App</string>

    <!-- Apply fragment String (some inherited from above)-->
    <string name="reason">Reason:</string>
    <string name="apply">Apply Now</string>
    <string name="auth">Approving Authority:</string>
    <string name="exitOn">Exit On:\n(dd/mm/yyyy)</string>
    <string name="entryOn">Entry On:\n(dd/mm/yyyy)</string>

    <!-- Notification Strings -->

    <!-- Strings related to Notification preference -->
    <string name="pref_last_sync">last_sync</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Leave Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Exit: <xliff:g id="date">%1$s</xliff:g>
    Status: <xliff:g id="status">%2$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Detail View String -->
    <string name="defaultText">Choose a leave to view detail here. :)</string>
    <string name="settings">Settings</string>
    <string name="app_signup">LeaveApp</string>
    <string name="reg_no">Registration no.</string>
    <string name="password_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="license_name">MIT License</string>
    <string name="mit_license">The MIT License (MIT) &#160; &#160;&#160; &#160; &#160;  Copyright &#169; [2015] [Google Developers Group-VIT Vellore]&#160; Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.  THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="done">Done</string>

</resources>
