<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_text"
        android:textColor="@android:color/white"
        android:layout_marginTop="200dp"
        android:text="@string/app_signup"
        android:textSize="32sp"
        android:layout_marginLeft="150dp"
        android:layout_alignRight="@+id/login_btn"
        android:layout_alignEnd="@+id/login_btn" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_box"
        android:layout_below="@+id/login_text"
        android:padding="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:hint="@string/reg_no"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/login_text_up"
        android:layout_alignParentStart="true"
        android:focusableInTouchMode="true"
        android:lines="1"
        android:maxLines="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:padding="10dp"
        android:background="@drawable/login_text_dowm"
        android:layout_below="@+id/reg_box"
        android:layout_alignLeft="@+id/reg_box"
        android:layout_alignStart="@+id/reg_box"
        android:id="@+id/pswrd_text"
        android:layout_alignRight="@+id/reg_box"
        android:layout_alignEnd="@+id/reg_box" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="203dp"
        android:elevation="12dp"
        android:textColor="@android:color/white"
        android:background="@xml/raised_button_background"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/login_btn_text"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/pswrd_text"
        android:layout_centerHorizontal="true" />

</RelativeLayout>