<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myViewButton"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/applyNowBtn"
            android:layout_width="203dp"
            android:elevation="12dp"
            android:textColor="@android:color/white"
            android:background="@xml/raised_button_background"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/apply" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_above="@id/myViewButton"
        android:layout_alignParentTop="true"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/applyToValueSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leave"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/leaveTypeValueSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exitOn"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textSize="17sp"
                android:ems="10"
                android:maxLines="5"
                android:id="@+id/exitOnValue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entryOn"
                android:inputType="date"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:textSize="17sp"
                android:maxLines="5"
                android:id="@+id/entryOnValue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLines="5"
                android:textSize="17sp"
                android:hint="@string/place"
                android:id="@+id/placeToValue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reason"
                android:singleLine="true"
                android:paddingTop="5dp"
                android:textSize="17sp"
                android:ems="10"
                android:id="@+id/reasonValue" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>